Continued work on JavaFXation