@@ -1,16 +1,16 @@
 /*
  * Copyright 2006-2020 The MZmine Development Team
- * 
+ *
  * This file is part of MZmine.
- * 
+ *
  * MZmine is free software; you can redistribute it and/or modify it under the terms of the GNU
  * General Public License as published by the Free Software Foundation; either version 2 of the
  * License, or (at your option) any later version.
- * 
+ *
  * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
  * Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License along with MZmine; if not,
  * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
  * USA
@@ -19,8 +19,6 @@
 package io.github.mzmine.modules.dataprocessing.filter_scanfilters;
 
 import java.awt.Color;
-import java.awt.Window;
-
 import io.github.mzmine.datamodel.Scan;
 import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectraPlot;
 import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectraVisualizerWindow;
@@ -34,7 +32,6 @@ import io.github.mzmine.parameters.dialogs.ParameterSetupDialogWithScanPreview;
  */
 public class ScanFilterSetupDialog extends ParameterSetupDialogWithScanPreview {
 
-  private static final long serialVersionUID = 1L;
   private ParameterSet filterParameters;
   private ScanFilter rawDataFilter;
 
@@ -42,14 +39,14 @@ public class ScanFilterSetupDialog extends ParameterSetupDialogWithScanPreview {
    * @param parameters
    * @param rawDataFilterTypeNumber
    */
-  public ScanFilterSetupDialog(Window parent, boolean valueCheckRequired,
-      ParameterSet filterParameters, Class<? extends ScanFilter> filterClass) {
+  public ScanFilterSetupDialog(boolean valueCheckRequired, ParameterSet filterParameters,
+      Class<? extends ScanFilter> filterClass) {
 
-    super(parent, valueCheckRequired, filterParameters);
+    super(valueCheckRequired, filterParameters);
     this.filterParameters = filterParameters;
 
     try {
-      this.rawDataFilter = filterClass.newInstance();
+      this.rawDataFilter = filterClass.getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       e.printStackTrace();
     }
@@ -57,9 +54,10 @@ public class ScanFilterSetupDialog extends ParameterSetupDialogWithScanPreview {
 
   /**
    * This function set all the information into the plot chart
-   * 
+   *
    * @param scanNumber
    */
+  @Override
   protected void loadPreview(SpectraPlot spectrumPlot, Scan previewScan) {
 
     Scan newScan = rawDataFilter.filterScan(previewScan, filterParameters);
